--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,18 @@
+:root{
+    --background-color:#fff;
+    --text-color:#000;
+    --title-color:#000;
+}
+.dark-theme{
+    --background-color:#000;
+    --text-color:#fff;
+    --title-color:#fff;
+}
 
-/* .dark-theme{
-    background-color: white;
-} */
-body,
-h1, 
-form p,
-h2,
-legend,
-label,
-form p {
+#header {
+    background-color: var(--background-color);
     transition: all 500ms ease-out;
-    color:black;
+    color:var(--text-color);
  
 
 }
@@ -19,67 +21,36 @@ form p {
    cursor: pointer;
    width: 30px;
 } 
-
+#add{
+    border: none;
+    align-items: center;
+    justify-content: center;
+    
+}
 
 input[type="radio"] {
-    height: 40px;
-    width: 40px;
+    height: 20px;
+    width: 20px;
 }
 
-#cyan {
-    background-color: #1C8BF2;
+#blue {
+    background-color: #4E6E81;
 }
 
-#orange {
-    background-color: #EE5E44;
+#pale {
+    background-color: #B4E4FF;
 }
 
 #green {
-    background-color: #2EAD0B;
+    background-color: #40826D;
 }
 
-#purple {
-    background-color: #740BAD;
+#maroon {
+    background-color: #A7727D;
 }
 
 
 fieldset {
     overflow: hidden;
     position: relative;
-}
-
-a.fork-me {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-a.fork-me i {
-    font-size: 40px;
-    color: #fff;
-    position: relative;
-    right: 7px;
-    transition: all 250ms linear;
-}
-
-a.fork-me::before {
-    content: "";
-    display: block;
-    background-color: #161616b2;
-    width: 100px;
-    height: 150px;
-    transform: skewY(45deg);
-    position: absolute;
-    top: -100px;
-    right: 0;
-    transition: all 250ms linear;
-}
-
-a.fork-me:hover i{
-    color: #1C8BF2;
-}
-
-body.night-mode a.fork-me::before {
-    background-color: #dadada71;
 }
